<resources>
    <string name="app_name">BarberRadar</string>
    <string name="title_reviews">Reviews</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_appointments">Appointment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back_arsene">Welcome Back, Arsene!</string>
    <string name="write_a_review">Write a Review</string>
    <string name="add_appointment">Add Appointment</string>
    
    <!-- Firebase authentication -->
    <string name="default_web_client_id" translatable="false">865081906341-qsd1vr1pbvgd6ddkq0hvavr3t4hnrg8g.apps.googleusercontent.com</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_successful">Login successful!</string>
    
    <!-- Shop Submission -->
    <string name="shop_image">Shop Image</string>
    <string name="view_documents">View Documents</string>
    <string name="approve">Approve</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="edit">Edit</string>
</resources>