<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_reviews"
        android:name="com.example.barberradar.ui.review.ReviewsFragment"
        android:label="@string/title_reviews"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.barberradar.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_appointments"
        android:name="com.example.barberradar.ui.appointments.AppointmentsFragment"
        android:label="@string/title_appointments"
        tools:layout="@layout/activity_appointment">
        
        <action
            android:id="@+id/action_navigation_appointments_to_appointmentHistory"
            app:destination="@id/appointmentHistoryFragment" />
            
        <action
            android:id="@+id/action_navigation_appointments_to_shopOwnerAppointments"
            app:destination="@id/shopOwnerAppointmentsFragment" />
    </fragment>
    
    <!-- Shop Owner Appointments Fragment -->
    <fragment
        android:id="@+id/shopOwnerAppointmentsFragment"
        android:name="com.example.barberradar.ui.appointments.ShopOwnerAppointmentsFragment"
        android:label="Shop Appointments"
        tools:layout="@layout/fragment_shop_owner_appointments">
        <argument
            android:name="shopId"
            app:argType="string" />
        <argument
            android:name="shopName"
            app:argType="string" />
    </fragment>
    
    <!-- Appointment History Fragment -->
    <fragment
        android:id="@+id/appointmentHistoryFragment"
        android:name="com.example.barberradar.ui.appointments.AppointmentHistoryFragment"
        android:label="Appointment History"
        tools:layout="@layout/fragment_appointment_history">
        <argument
            android:name="shopId"
            app:argType="string" />
        <argument
            android:name="shopName"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.barberradar.ui.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile">
        
        <action
            android:id="@+id/action_profile_to_shopSubmissions"
            app:destination="@id/shopSubmissionsFragment" />
            
        <action
            android:id="@+id/action_profile_to_admin"
            app:destination="@id/adminFragment" />
    </fragment>

    <fragment
        android:id="@+id/editShopFragment"
        android:name="com.example.barberradar.ui.shops.EditShopFragment"
        android:label="Edit Shop"
        tools:layout="@layout/fragment_edit_shop">
        <argument
            android:name="shopId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.example.barberradar.ui.NotificationRFragment"
        android:label="Notifications"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/navigation_full_map"
        android:name="com.example.barberradar.ui.FullMapFragment"
        android:label="Full Screen Map"
        tools:layout="@layout/fragment_full_map" />

    <action
        android:id="@+id/action_dashboard_to_full_map"
        app:destination="@id/navigation_full_map" />

    <action
        android:id="@+id/action_dashboard_to_appointment"
        app:destination="@id/navigation_appointments"
        app:popUpTo="@id/navigation_dashboard"
        app:popUpToInclusive="false">
        <argument
            android:name="shopId"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="shopName"
            app:argType="string"
            android:defaultValue="" />
    </action>

    <!-- Shop Submissions Fragment for users to track their shop submissions -->
    <fragment
        android:id="@+id/shopSubmissionsFragment"
        android:name="com.example.barberradar.ui.submissions.ShopSubmissionsFragment"
        android:label="My Shop Submissions"
        tools:layout="@layout/fragment_shop_submissions">
        
        <action
            android:id="@+id/action_shopSubmissions_to_editShop"
            app:destination="@id/editShopFragment" />
            
        <action
            android:id="@+id/action_shopSubmissions_to_addShop"
            app:destination="@id/addShopFragment" />
            
        <!-- Navigation to appointment fragments -->
        <action
            android:id="@+id/action_shopSubmissions_to_shopOwnerAppointments"
            app:destination="@id/shopOwnerAppointmentsFragment" />
            
        <action
            android:id="@+id/action_shopSubmissions_to_appointmentHistory"
            app:destination="@id/appointmentHistoryFragment" />
    </fragment>
    
    <!-- Admin Fragment for managing shops and users -->
    <fragment
        android:id="@+id/adminFragment"
        android:name="com.example.barberradar.ui.admin.AdminFragment"
        android:label="Admin Panel"
        tools:layout="@layout/fragment_admin" />
        
    <!-- Add Shop Fragment -->
    <fragment
        android:id="@+id/addShopFragment"
        android:name="com.example.barberradar.ui.shops.AddShopFragment"
        android:label="Add New Shop"
        tools:layout="@layout/fragment_add_shop">
        <action
            android:id="@+id/action_addShop_to_shopSubmissions"
            app:destination="@id/shopSubmissionsFragment"
            app:popUpTo="@id/shopSubmissionsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <!-- Payment Fragment -->    
    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.example.barberradar.ui.payments.PaymentFragment"
        android:label="Payment"
        tools:layout="@layout/fragment_payment">
        <argument
            android:name="appointmentId"
            app:argType="string" />
        <action
            android:id="@+id/action_paymentFragment_to_paymentSuccessFragment"
            app:destination="@id/paymentSuccessFragment"
            app:popUpTo="@id/paymentFragment"
            app:popUpToInclusive="true" />
    </fragment>
    
    <!-- Payment Success Fragment -->    
    <fragment
        android:id="@+id/paymentSuccessFragment"
        android:name="com.example.barberradar.ui.payments.PaymentSuccessFragment"
        android:label="Payment Successful"
        tools:layout="@layout/fragment_payment_success">
        <argument
            android:name="appointmentId"
            app:argType="string" />
    </fragment>
</navigation>